tests/cases/functions/errors/function-overload-params.ari
fn pick(value: i64) -> i64 {
  value
}

fn pick(value: i64, fallback: i64) -> i64 {
  value + fallback
}

fn main() -> i64 {
  pick(1)
}
